--- a/profile/index.html
+++ b/profile/index.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />	
-	<title>Hyun's Portfolio</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css" />	
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
@@ -12,6 +11,8 @@
 	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<script src="https://kit.fontawesome.com/bc0f1996aa.js" crossorigin="anonymous"></script>
+	<title>Hyun's Portfolio</title>
 </head>
 <body>
 
@@ -103,8 +104,19 @@
 							</div>
 						</div>
 						<div class="card__content">
-							<img src="./img/vue.png" alt="" width="300px">
-							<p>안녕하세요</p>
+							<img src="./img/profile01.png" alt="" width="270">
+						</div>
+						<div class="card_para">
+							<p>🤗 Hyunho Sohn</p>
+							<div class="switch-holder">
+								<div class="switch-label">
+									<span>📍 프로필 공개여부</span>
+								</div>
+								<div class="switch-toggle">
+									<input type="checkbox" id="bluetooth" checked>
+									<label for="bluetooth"></label>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -142,10 +154,25 @@
 								<span>heun3316@naver.com</span>
 							</td>
 						</tr>
-						<tr>
+						<tr class="skillsBoard">
 							<td colspan="2">
 								<p>보유스킬</p>
-								<span>HTML5, CSS3, JavaScript(ES6/Typescript), React.js, Vue.js, jQuery, JSON, AJAX, Bootstrap, WordPress, PHP, MySQL, Git, Adobe Photoshop, Adobe illustrator, Adobe Premiere Pro, Trados</span>
+								<i class="fa-brands fa-react"></i> &nbsp;
+								<i class="fa-brands fa-vuejs"></i> &nbsp;
+								<img src="./img/skill_1.png" alt="html5"> &nbsp;
+								<img src="./img/skill_2.png" alt="css3"> &nbsp;
+								<img src="./img/skill_3.png" alt="js"> &nbsp;
+								<img src="./img/skill_4.png" alt="jquery"> &nbsp;
+								<img src="./img/skill_5.png" alt="json"> &nbsp;
+								<img src="./img/skill_6.png" alt="ajax"> &nbsp;
+								<img src="./img/skill_7.png" alt="bootstrap"> &nbsp;
+								<img src="./img/skill_8.png" alt="wordpress"> &nbsp;
+								<img src="./img/skill_9.png" alt="php"> &nbsp;
+								<img src="./img/skill_10.png" alt="mysql"> &nbsp; <br>
+								<img src="./img/skill_11.png" alt="github"> &nbsp;
+								<img src="./img/skill_12.png" alt="Photoshop"> &nbsp;
+								<img src="./img/skill_13.png" alt="illustrator"> &nbsp;
+								<img src="./img/skill_14.png" alt="Premierepro">
 							</td>
 							<td>
 							</td>
