--- a/profile/index.html
+++ b/profile/index.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />	
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css" />	
+	<link rel="stylesheet" href="css/style.css">	
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
@@ -18,7 +19,7 @@
 
 <!-- logo -->
 <h1>
-	<a href="/index.html">Hyun</a>
+	<a href="../profile/index.html">Hyun</a>
 </h1>
 
 <!-- 주 메뉴(nav) -->
@@ -104,7 +105,7 @@
 							</div>
 						</div>
 						<div class="card__content">
-							<img src="./img/profile01.png" alt="" width="270">
+							<img src="./img/profile01.png" alt="">
 						</div>
 						<div class="card_para">
 							<p>🤗 Hyunho Sohn</p>
@@ -124,7 +125,7 @@
 					<a href="https://github.com/arthyun/www.git" target="_blank">
 						<span>GIT HUB</span><i></i>
 					</a>
-					<a href="#" target="_blank">
+					<a href="../resume/resume.html" target="_blank">
 						<span>RESUME</span><i></i>
 					</a>
 					<a href="#" target="_blank">
@@ -197,8 +198,8 @@
 					<p id="fontAndColor">Noto Sans KR, Roboto &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="pcRight">
-					<img src="./img/123.png" alt="mockup1" width="550">
-					<img src="./img/123.gif" alt="pcGif" width="522" height="294">
+					<img src="./img/123.png" alt="mockup1">
+					<img src="./img/123.gif" alt="pcGif">
 					<a href="http://heen3316.cafe24.com" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -220,7 +221,7 @@
 				</div>
 				<div id="mobileRight">
 					<div>
-						<img src="./img/모바일.gif" alt="mobileGif" width="245px">
+						<img src="./img/모바일.gif" alt="mobileGif">
 					</div>
 					<a href="http://heen3316.cafe24.com/mobile" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
@@ -242,8 +243,8 @@
 					<p id="fontAndColor2">Helvetica &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="resRight">
-					<img src="./img/123.png" alt="mockup1" width="550">
-					<img src="./img/반응형.gif" alt="resGif" width="522" height="294">
+					<img src="./img/123.png" alt="mockup1">
+					<img src="./img/반응형.gif" alt="resGif">
 					<a href="http://heen3316.cafe24.com/media" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -264,8 +265,8 @@
 					<p id="fontAndColor3">Audi Type &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="bootRight">
-					<img src="./img/123.png" alt="mockup1" width="550">
-					<img src="./img/부트스트랩.gif" alt="bootGif" width="522" height="294">
+					<img src="./img/123.png" alt="mockup1">
+					<img src="./img/부트스트랩.gif" alt="bootGif">
 					<a href="http://heen3316.cafe24.com/bootstrap" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -286,8 +287,8 @@
 					<p id="fontAndColor4">Jost &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="wordRight">
-					<img src="./img/123.png" alt="mockup1" width="550">
-					<img src="./img/워드프레스.gif" alt="wordGif" width="522" height="294">
+					<img src="./img/123.png" alt="mockup1">
+					<img src="./img/워드프레스.gif" alt="wordGif">
 					<a href="http://heen3316.cafe24.com/wordpress" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -308,8 +309,8 @@
 					<p id="fontAndColor5">Noto Sans KR &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="vueRight">
-					<img src="./img/123.png" alt="mockup1" width="550">
-					<img src="./img/Vue.gif" alt="vueGif" width="522" height="294">
+					<img src="./img/123.png" alt="mockup1">
+					<img src="./img/Vue.gif" alt="vueGif">
 					<a href="http://heen3316.cafe24.com/vue" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -331,7 +332,7 @@
 				</div>
 				<div id="reactRight">
 					<div>
-						<img src="./img/React.gif" alt="reactGif" width="245px">
+						<img src="./img/React.gif" alt="reactGif">
 					</div>
 					<a href="http://heen3316.cafe24.com/react" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
