--- a/profile/index.html
+++ b/profile/index.html
@@ -105,7 +105,7 @@
 							</div>
 						</div>
 						<div class="card__content">
-							<img src="./img/profile01.png" alt="">
+							<img src="./img/profile02.png" alt="">
 						</div>
 						<div class="card_para">
 							<p>🤗 Hyunho Sohn</p>
@@ -245,6 +245,8 @@
 				<div id="resRight">
 					<img src="./img/123.png" alt="mockup1">
 					<img src="./img/반응형.gif" alt="resGif">
+					<img class="resIpad" src="./img/resImg_ipad.png" alt="resIpad">
+					<img class="resIphone" src="./img/resImg_iphone.png" alt="resIpad">
 					<a href="http://heen3316.cafe24.com/media" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -267,6 +269,8 @@
 				<div id="bootRight">
 					<img src="./img/123.png" alt="mockup1">
 					<img src="./img/부트스트랩.gif" alt="bootGif">
+					<img class="bootIpad" src="./img/bootImg_ipad.png" alt="bootIpad">
+					<img class="bootIphone" src="./img/bootImg_iphone.png" alt="bootIpad">
 					<a href="http://heen3316.cafe24.com/bootstrap" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -289,6 +293,8 @@
 				<div id="wordRight">
 					<img src="./img/123.png" alt="mockup1">
 					<img src="./img/워드프레스.gif" alt="wordGif">
+					<img class="wordIpad" src="./img/wordImg_ipad.png" alt="wordIpad">
+					<img class="wordIphone" src="./img/wordImg_iphone.png" alt="wordIpad">
 					<a href="http://heen3316.cafe24.com/wordpress" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
@@ -311,6 +317,8 @@
 				<div id="vueRight">
 					<img src="./img/123.png" alt="mockup1">
 					<img src="./img/Vue.gif" alt="vueGif">
+					<img class="vueIpad" src="./img/vueImg_ipad.png" alt="vueIpad">
+					<img class="vueIphone" src="./img/vueImg_iphone.png" alt="vueIpad">
 					<a href="http://heen3316.cafe24.com/vue" class="css-button css-button-retro css-button-retro--sky" target="_blank">Visit Site</a>
 				</div>
 			</div>
