--- a/profile/index.html
+++ b/profile/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="js/prefixfree.min.js"></script>
 	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
-	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 	<script src="https://kit.fontawesome.com/bc0f1996aa.js" crossorigin="anonymous"></script>
 	<title>Hyun's Portfolio</title>
 </head>
@@ -19,7 +19,7 @@
 
 <!-- logo -->
 <h1>
-	<a href="../profile/index.html">Hyun</a>
+	<a href="../profile/index.html"><span class="hidden">Hyun</span></a>
 </h1>
 
 <!-- 주 메뉴(nav) -->
@@ -128,7 +128,7 @@
 					<a href="../resume/resume.html" target="_blank">
 						<span>RESUME</span><i></i>
 					</a>
-					<a href="#" target="_blank">
+					<a href="./storyboard-손현호.pdf" target="_blank">
 						<span>STORY BOARD</span><i></i>
 					</a>
 				</div>
