modify profile v06 & resume v01

--- a/profile/index.html
+++ b/profile/index.html
@@ -331,7 +331,7 @@
 			<div id="reactZone">
 				<div id="reactLeft">
 					<h2>REACT</h2>
-					<span>현존하는 프레임워크 중 점유율 1위를 차지하고 있는 React.js를 이용하여 오늘의 할일이나 메모를 작성 및 기록해 놓을 수 있으며 직관적인 UI로 누구나 손쉽게 기록을 할 수 있는 장점을 가진 TODOLIST 프로젝트를 제작하였습니다.</span>
+					<span>현존하는 프레임워크 중 점유율 1위를 차지하고 있으며 컴포넌트 기반의 라이브러리인 React.js를 이용하여 오늘의 할일이나 메모를 작성 및 기록해 놓을 수 있으며 직관적인 UI로 누구나 손쉽게 기록을 할 수 있는 장점을 가진 TODO-LIST 프로젝트를 제작하였습니다.</span>
 					<p>제작기간</p>
 					<span>2022.12.07 ~ 2022.12.10 (약 3일)</span>
 					<p>제작스킬</p>
