--- a/resume/resume.html
+++ b/resume/resume.html
@@ -61,7 +61,7 @@
                             <li>
                                 <dl>
                                     <dt>주소</dt>
-                                    <dd>경기도 과천시 별양로 110 과천자이 623동 804호</dd>
+                                    <dd>경기도 과천시 별양로 110</dd>
                                 </dl>
                             </li>
                         </ul>
@@ -250,7 +250,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                웹사이트 이름<br>(Vue를 이용한 SPA)
+                                서울시 공원 현황<br>(Vue를 이용한 SPA)
                             </dt>
                             <dd class="bd1_r bd1_l">
                                 프레임워크인 Vue를 이용한 서울의 공원 데이터 api를 가져와 각 지역별로 쉽게 확인할 수 있도록 제작
@@ -263,10 +263,10 @@
                     <li class="items no-bd-bottom">
                         <dl>
                             <dt>
-                                웹사이트 이름<br>(React를 이용한 SPA)
+                                Todo-list<br>(React를 이용한 SPA)
                             </dt>
                             <dd class="bd1_r bd1_l">
-                                프레임워크인 React를 이용한 모바일 전용 Todolist 제작 
+                                컴포넌트 기반의 Javascript 라이브러리인 React를 이용한 모바일 전용 Todolist 제작 
                             <dd>
                                 <a href="http://heen3316.cafe24.com/react" target="_blank">http://heen3316.cafe24.com/react</a>
                             </dd>
