--- a/profile/index.html
+++ b/profile/index.html
@@ -133,7 +133,7 @@
 					</a>
 				</div>
 				<div id="profileRight">
-					<h2 style="font-style: italic; font-size: 50px;">손현호 <span class="profileSpan">Front End Development / Web Publisher</span></h2>
+					<h2 style="font-style: italic; font-size: 50px;">손현호 <span class="profileSpan">Front End Developer / Web Publisher</span></h2>
 					<table id="profileTable">
 						<tr>
 							<td>
