--- a/profile/index.html
+++ b/profile/index.html
@@ -160,18 +160,23 @@
 							<td colspan="2">
 								<p>보유스킬</p>
 								<i class="fa-brands fa-react"></i> &nbsp;
+								<img src="./img/skill_16.png" alt="redux"> &nbsp;
 								<i class="fa-brands fa-vuejs"></i> &nbsp;
+								<i class="fa-brands fa-sass"></i> &nbsp;
+								<i class="fa-brands fa-less"></i> &nbsp;
 								<img src="./img/skill_1.png" alt="html5"> &nbsp;
 								<img src="./img/skill_2.png" alt="css3"> &nbsp;
 								<img src="./img/skill_3.png" alt="js"> &nbsp;
+								<img src="./img/skill_15.png" alt="ts"> &nbsp;
 								<img src="./img/skill_4.png" alt="jquery"> &nbsp;
 								<img src="./img/skill_5.png" alt="json"> &nbsp;
 								<img src="./img/skill_6.png" alt="ajax"> &nbsp;
-								<img src="./img/skill_7.png" alt="bootstrap"> &nbsp;
-								<img src="./img/skill_8.png" alt="wordpress"> &nbsp;
-								<img src="./img/skill_9.png" alt="php"> &nbsp;
-								<img src="./img/skill_10.png" alt="mysql"> &nbsp; <br>
-								<img src="./img/skill_11.png" alt="github"> &nbsp;
+								<i class="fa-brands fa-php"></i> &nbsp;
+								<img src="./img/skill_10.png" alt="mysql"> &nbsp;
+								<i class="fa-brands fa-wordpress"></i> &nbsp;
+								<i class="fa-brands fa-bootstrap"></i> &nbsp;
+								<i class="fa-brands fa-square-git"></i> &nbsp;
+								<i class="fa-brands fa-github"></i> &nbsp;
 								<img src="./img/skill_12.png" alt="Photoshop"> &nbsp;
 								<img src="./img/skill_13.png" alt="illustrator"> &nbsp;
 								<img src="./img/skill_14.png" alt="Premierepro">
