--- a/resume/resume.html
+++ b/resume/resume.html
@@ -108,7 +108,7 @@
                                 디자인파크
                             </dd>
                             <dd>
-                                편집디자인 및 html 보수/ 번역 관리(삼성전자 협력)
+                                편집디자인 및 HTML5 웹사이트 유지 보수(삼성전자 협력)
                             </dd>
                         </dl>
                     </li>
@@ -144,7 +144,7 @@
                                 프론트엔드 웹&앱 SW개발자 양성과정 
                             </dd>
                             <dd class="bd1_r">
-                                강남그린컴퓨터
+                                그린컴퓨터아카데미
                             </dd>
                             <dd>수료</dd>
                         </dl>
@@ -158,7 +158,7 @@
                                 편집디자인 과정
                             </dd>
                             <dd class="bd1_r">
-                                안양그린컴퓨터
+                                그린컴퓨터아카데미
                             </dd>
                             <dd>수료</dd>
                         </dl>
@@ -291,7 +291,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                Photoshop
+                                Adobe Photoshop
                             </dt>
                             <dd class="bd1_l">
                                 전반적인 누끼, 합성, 색감조절, 보정, 이미지 변환, 목업 기능을 손쉽게 다룰 수 있으며, 다양한 effects로 artwork를 만들 수 있습니다.
@@ -301,7 +301,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                Illustrator
+                                Adobe Illustrator
                             </dt>
                             <dd class="bd1_l">
                                 필요한 아이콘, 로고, 아트웍 등을 직접 제작이 가능하며 원하는 이미지를 구현 가능합니다. 또한 실무에서 실사 제품을 그리는 작업을 자주 해봤으며, 일러스트로 pdf파일도 편집을 할 수 있고, 인쇄용(재단선포함)을 만들기 위한 박스, 제품디자인도 가능합니다.
@@ -311,7 +311,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                Indesign
+                                Adobe Indesign
                             </dt>
                             <dd class="bd1_l">
                                 전반적인 출판물을 위해 제작하고자 하는 관련 기능이나 인쇄전 주의를 기울이며 제작하여야 하는 기법을 숙지하고 있으며, 조판도 가능합니다.
@@ -321,7 +321,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                Premiere Pro
+                                Adobe Premiere Pro
                             </dt>
                             <dd class="bd1_l">
                                 간단한 영상 편집 기능을 활용하여 제작할 수 있으며, 유튜브에 영상을 업로드 하기도 하였습니다.
@@ -331,7 +331,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                Trados
+                                Trados(번역관련)
                             </dt>
                             <dd class="bd1_l">
                                 트라도스 프로그램을 통해 Translation memory를 관리할 수 있으며, 수정된 번역본에 대한 내용을 직접 추가, 수정, 삭제도 가능하며, 원하는 나라별로 package를 제작하여 번역사와 쉽게 소통이 가능합니다.
@@ -351,7 +351,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                CSS
+                                CSS3(SASS,LESS 전처리기 포함)
                             </dt>
                             <dd class="bd1_l">
                                 구현하고자 하는 effect와 animation을 적절하게 구사할 수 있으며, css를 통한 3D효과에도 관심을 가지고 있습니다.
@@ -360,7 +360,7 @@
                     <li class="items">
                         <dl>
                             <dt>
-                                Javascript
+                                Javascript(Typescript 포함)
                             </dt>
                             <dd class="bd1_l">
                                 HTML, CSS로 구현된 웹 사이트에 다양한 효과를 주기위한 자바스크립트 사용이 가능합니다.
@@ -374,6 +374,36 @@
                             </dt>
                             <dd class="bd1_l">
                                 HTML, CSS로 구현된 웹 사이트에 다양한 효과를 주기위한 제이쿼리를 사용 가능하며, 제이쿼리로 바닐라 스크립트보다 간결하게 표현 가능합니다.
+                            </dd>
+                        </dl>
+                    </li>
+                    <li class="items">
+                        <dl>
+                            <dt>
+                                React
+                            </dt>
+                            <dd class="bd1_l">
+                                자바스크립트 라이브러리인 React.js를 활용하여 SPA작업 가능
+                            </dd>
+                        </dl>
+                    </li>
+                    <li class="items">
+                        <dl>
+                            <dt>
+                                Redux
+                            </dt>
+                            <dd class="bd1_l">
+                                자바스크립트 라이브러리인 React.js의 중앙 상태 관리 라이브러리인 Redux사용 가능
+                            </dd>
+                        </dl>
+                    </li>
+                    <li class="items">
+                        <dl>
+                            <dt>
+                                Vue
+                            </dt>
+                            <dd class="bd1_l">
+                                자바스크립트 프레임워크인 Vue.js를 사용하여 SPA작업 가능
                             </dd>
                         </dl>
                     </li>
@@ -520,10 +550,10 @@
                             <dt>지원동기</dt>
                             <dd>
                                 <strong>
-                                    "야 너도 스마트해질 수 있어. 스너두"
+                                    "불편한 서비스는 전망이 어둡다"
                                 </strong>
                                 <p>약 2년간 삼성전자 협력회사에서 편집디자인 및 HTML를 활용하여 간단하게 웹 사이트 유지보수 업무를 진행했습니다. 처음 업무를 시작할 당시에는 아무것도 모르는 상태로 HTML만 공부하여 유지보수를 했지만 점차 웹에는 HTML뿐만 아니라 CSS, JavaScript도 함께 동반되어야 한다는 것을 알게 되었고 흥미를 가지고 독학을 시작하게 되었습니다. 공부를 하면 할수록 컴퓨터 언어, 쌓았던 코드들이 잘 작동하고 있는지를 직접 눈으로 볼 수 있는 프론트엔드 부분에 매력을 느꼈습니다.</p>
-                                <p>저는 직관적인 디자인으로 누구나 사용할 수 있는 서비스를 개발하고 싶습니다. 주문 키오스크, 은행atm기와 같이 점차 활용되는 부분이 많아지지만 사용하기 어려웠던 부분을 개선하여 남녀노소 모두 쉽게 사용할 수 있도록 만듦으로써 고객이 만족할 수 있는 서비스를 제공하고 싶습니다.</p>
+                                <p>저는 직관적인 디자인으로 누구나 사용할 수 있는 웹 & 앱 서비스를 개발하고 싶습니다. 평소 웹앱을 이용함에 있어 장애인이나 고령자들이 이용에 불편을 겪는것으로 알고있습니다. 이는 우리가 웹앱을 제작함에 있어 웹접근성을 고려하지 않은채 제작을 했기 때문이라고 생각합니다. 이 문제점을 적극적으로 고려하여 웹접근성 및 충분한 UX기반으로 웹앱을 제작하여 상용화하고 싶습니다.</p>
                             </dd>
                         </dl>
                     </li>
@@ -571,11 +601,9 @@
                             <dt>입사 후 포부</dt>
                             <dd>
                                 <strong>
-                                    "남다른 성장 곡선을 그리는 개발자"
+                                    "성장 곡선을 그리는 개발자"
                                 </strong>
-                                <p>다양한 언어들을 받아들이고 새로운 방식들을 프로젝트에 적시적소에 적용하기 위해서는 계속해서 공부해야 한다고 생각합니다.</p>
-                                <p>입사하여 회사의 업무방식을 빠르게 익히고 다양한 프로젝트에 참여하여 고객들에게 필요한 서비스를 구현하고 싶습니다. 또한, 프론트엔드 안에서 그치지 않고 백엔드에 필요한 node.js, java, jsp 등을 가까이 두고 경험함으로써 프로젝트에 참여할 수 있는 범위를 넓혀가고 싶습니다.</p>
-                                <p>다재다능한 주니어 개발자로서 회사와 함께 성장하고 기여하고 싶습니다.</p>
+                                <p>제가 입사하게 된다면 남들보다 늦은 나이에 IT직종에 뛰어든 만큼 성장하고자 하는 동기부여는 더 확실하다고 말씀드리고 싶습니다. 지난 사회생활 경험을 살려 최대한 빠르게 업무를 파악하고 방향을 잡아 업무를 수월하게 할 것이며, 빠르게 변화하는 프론트엔드의 트렌드를 따라가고자 부족한 스킬은 개인시간을 내서 업무와 같이 병행해서 습득하겠습니다. 이러한 마인드를 가지고 계속해서 성장하는 곡선을 그려내겠습니다. 감사합니다.</p>
                             </dd>
                         </dl>
                     </li>
