--- a/profile/index.html
+++ b/profile/index.html
@@ -245,7 +245,7 @@
 					<p>제작기간</p>
 					<span>2022.09.07 ~ 2022.09.21 (약 2주)</span>
 					<p>제작스킬</p>
-					<span>HTML5, CSS3, Media Query, JavaScript, jQuery, AJAX, Adobe Photoshop, illustrator, Premiere Pro, W3C 웹표준 통합 마크업 검사(html/css), 웹접근성검사(K-WAH), 크로스브라우징 완료</span>
+					<span>HTML5, CSS3, Media Query, JavaScript, jQuery, Adobe Photoshop, illustrator, Premiere Pro, W3C 웹표준 통합 마크업 검사(html/css), 웹접근성검사(K-WAH), 크로스브라우징 완료</span>
 					<p id="fontAndColor2">Helvetica &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="resRight">
@@ -265,11 +265,11 @@
 			<div id="bootZone">
 				<div id="bootLeft">
 					<h2>BOOTSTRAP</h2>
-					<span>아우디 자동차를 주제로 한 반응형 웹사이트입니다. 프레임워크 중 제일 인지도가 높은 부트스트랩을 사용하여 브랜드 이미지에 맞는 디자인과 레이아웃을 보다 간편하고 빠르게 구현했습니다.</span>
+					<span>아우디 자동차를 주제로 한 반응형 웹사이트입니다. 라이브러리 중 제일 인지도가 높은 부트스트랩을 사용하여 브랜드 이미지에 맞는 디자인과 레이아웃을 보다 간편하고 빠르게 구현했습니다.</span>
 					<p>제작기간</p>
 					<span>2022.10.01 ~ 2022.10.03 (약 2일)</span>
 					<p>제작스킬</p>
-					<span>BootStrap, HTML5, CSS3, JavaScript, jQuery, Adobe Photoshop, illustrator, W3C 웹표준 통합 마크업 검사(html/css), 웹접근성검사(K-WAH), 크로스브라우징 완료</span>
+					<span>BootStrap, HTML5, CSS3, JavaScript, jQuery, AJAX, Adobe Photoshop, illustrator, W3C 웹표준 통합 마크업 검사(html/css), 웹접근성검사(K-WAH), 크로스브라우징 완료</span>
 					<p id="fontAndColor3">Audi Type &nbsp;/&nbsp; <span></span> &nbsp;<span></span></p>
 				</div>
 				<div id="bootRight">
@@ -313,7 +313,7 @@
 			<div id="vueZone">
 				<div id="vueLeft">
 					<h2>VUE</h2>
-					<span>현존하는 프레임워크 중 점유율 2위를 차지하고 있는 Vue.js를 이용하여 서울시 공공데이터 api를 가져와 손쉽게 서울시 내에 존재하는 공원들의 정보를 찾아볼 수 있는 프로젝트를 제작했습니다.</span>
+					<span>현존하는 동적 프레임워크 중 점유율 2위를 차지하고 있는 Vue.js를 이용하여 서울시 공공데이터 api를 가져와 손쉽게 서울시 내에 존재하는 공원들의 정보를 찾아볼 수 있는 프로젝트를 제작했습니다.</span>
 					<p>제작기간</p>
 					<span>2022.11.23 ~ 2022.11.26 (약 3일)</span>
 					<p>제작스킬</p>
@@ -337,7 +337,7 @@
 			<div id="reactZone">
 				<div id="reactLeft">
 					<h2>REACT</h2>
-					<span>현존하는 프레임워크 중 점유율 1위를 차지하고 있으며 컴포넌트 기반의 라이브러리인 React.js를 이용하여 오늘의 할일이나 메모를 작성 및 기록해 놓을 수 있으며 직관적인 UI로 누구나 손쉽게 기록을 할 수 있는 장점을 가진 TODO-LIST 프로젝트를 제작하였습니다.</span>
+					<span>현존하는 JavaScript 라이브러리 점유율 1위를 차지하고 있으며 컴포넌트 기반의 라이브러리인 React.js를 이용하여 오늘의 할일이나 메모를 작성 및 기록해 놓을 수 있으며 직관적인 UI로 누구나 손쉽게 기록을 할 수 있는 장점을 가진 TODO-LIST 프로젝트를 제작하였습니다.</span>
 					<p>제작기간</p>
 					<span>2022.12.07 ~ 2022.12.10 (약 3일)</span>
 					<p>제작스킬</p>
